--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Home</h1>
+        <h1>Estados do Brasil</h1>
         <a href="./favoritos/index.html">Ver favoritos</a>
     </header>
     <main>
