--- a/favoritos/index.html
+++ b/favoritos/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header><h1 id="titulo">Pagina dos favoritos</h1>
+    <header><h1 id="titulo">Municípios favoritos</h1>
     <a href="../index.html">Ir para a home</a>
     </header>
 
