--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -11,6 +11,7 @@
     <header>
         <h1>Estados do Brasil</h1>
         <a href="./favoritos/index.html">Ver favoritos</a>
+        <a href="./so-as-melhores/melhores-cidades.html">Tabela</a>
     </header>
     <main>
         <div id="lista">
