Centralizei, mudei o estilo da tabela e negrito nos links

--- a/favoritos/index.html
+++ b/favoritos/index.html
@@ -8,8 +8,9 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header><h1 id="titulo">Municípios favoritos</h1>
-    <a href="../index.html">Ir para a home</a>
+    <header>
+        <h1 id="titulo">Municípios favoritos</h1>
+        <a href="../index.html">Ir para a home</a>
     </header>
 
     <main>
