--- a/municipios/index.html
+++ b/municipios/index.html
@@ -8,9 +8,10 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header><h1 id="titulo"></h1>
-    <a href="../index.html">Ir para a home</a>
-    <a href="../favoritos/index.html">Ver favoritos</a>
+    <header>
+        <h1 id="titulo"></h1>
+        <a href="../index.html">Ir para a home</a>
+        <a href="../favoritos/index.html">Ver favoritos</a>
     </header>
     <main>
         <div id="lista">
