--- a/so-as-melhores/melhores-cidades.html
+++ b/so-as-melhores/melhores-cidades.html
@@ -13,15 +13,18 @@
 <body>
     <header>
         <h1 id="titulo">Municípios com os melhores nomes</h1>
-        <h2>E outros com nomes curiosos</h2>
+        <h2>(E outros com nomes curiosos)</h2>
+        <a href="../index.html">Ir para a home</a>
     </header>
 
     <main>
-        <table>
-            <tbody id="tabela">
-                
-            </tbody>
-        </table>
+        <div id="conteiner">
+            <table>
+                <tbody id="tabela">
+
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer>© 2024 Prova de Programação Web</footer>
 
