adicionei várias cidades, aumentei a fonte e adicionei botão piscante

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Estados do Brasil</h1>
-        <a href="./so-as-melhores/melhores-cidades.html">Tabela</a>
+        <a href="./so-as-melhores/melhores-cidades.html" id="tabela">Tabela</a>
         <a href="./favoritos/index.html">Ver favoritos</a>
     </header>
     <main>
