--- a/so-as-melhores/melhores-cidades.html
+++ b/so-as-melhores/melhores-cidades.html
@@ -12,19 +12,16 @@
 
 <body>
     <header>
-        <h1 id="titulo">Municípios com os melhores nomes</h1>
-        <h2>(E outros com nomes curiosos)</h2>
+        <h1 id="titulo">Quem tem limite é município? A maioria desses não tem kkj</h1>
         <a href="../index.html">Ir para a home</a>
     </header>
 
     <main>
-        <div id="conteiner">
-            <table>
-                <tbody id="tabela">
+        <table>
+            <tbody id="tabela">
 
-                </tbody>
-            </table>
-        </div>
+            </tbody>
+        </table>
     </main>
     <footer>© 2024 Prova de Programação Web</footer>
 
