--- a/so-as-melhores/melhores-cidades.html
+++ b/so-as-melhores/melhores-cidades.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 id="titulo">Quem tem limite é município? A maioria desses não tem kkj</h1>
+        <h1 id="titulo">Quem tem limite é município? A maioria desses não tem n kkj</h1>
         <a href="../index.html">Ir para a home</a>
     </header>
 
