adicionado jogo pong ao site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Estados do Brasil</h1>
         <a href="./so-as-melhores/melhores-cidades.html" id="tabela">Tabela</a>
         <a href="./favoritos/index.html">Ver favoritos</a>
+        <a href="./jogo-pong/index.html">Jogo "Pong"</a>
     </header>
     <main>
         <div id="lista">
